implement delete user in UserDashboardController.js file ,Usercontroller,userServiceImpl classes,userService interfaces in SpringBackEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/userDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/userDashboard.html
@@ -147,7 +147,7 @@
   <div  class=" myf offcanvas offcanvas-end " tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel" >
     <div class="col-12 mt-2" style="height:30px;">
       <label class="col-7 ms-2 fs-4" style="height: max-content;font-family: 'Convergence', sans-serif;text-decoration: underline;">User Profile</label>
-      <label class="col-4 ms-2 fs-4 text-end" style="height: max-content;" id="UserProfileID">U001</label>
+      <label class="col-4 ms-2 fs-4 text-end" style="height: max-content;" id="UserProfileID"></label>
     </div>
     <div class="row justify-content-center" style="height: 100px">
       <div class="col-3 align-self-center">
