implement acceptUser,clearUserFields methods in adminDashboard.js file when  in SpringBackEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
@@ -517,8 +517,8 @@
                                 </div>
                                 <div class="col-md-4">
                                     <div class="d-grid mt-5 gap-2 d-md-flex justify-content-md-end">
-                                        <button class="btn fs-5 me-3  btn-dark mt-5"  type="button">Correct Data</button>
-                                        <button class="btn fs-5 me-3 btn-dark mt-5"  type="button">Incorrect Data</button>
+                                        <button class="btn fs-5 me-3  btn-dark mt-5" type="button" id="btnAcceptUser">Accept</button>
+                                        <button class="btn fs-5 me-3 btn-dark mt-5" type="button" id="btnDenyUser">Deny</button>
                                     </div>
                                 </div>
                             </form>
