--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
@@ -275,7 +275,7 @@
                                     <label class="mt-2 fs-5" style="width: max-content; border-bottom: 3px solid black"> <i class="fa-solid fa-house-chimney"></i> Number of Users </label>
                                 </div>
                                 <div class="col-12 mt-3">
-                                    <label class="mt-1 fs-1" id="lblNoOfUsers" style="width: max-content"> 00 </label>
+                                    <label class="mt-1 fs-1" id="lblNoOfUsers" style="width: max-content"></label>
                                 </div>
                             </div>
                             <div class="col-3 ms-3 me-4 mt-4 bg-light" style="height: 140px;border-radius: 8px;box-shadow: 2px 3px 8px 0px #939393e8;">
