implement addCar,uploadCarImages,clearAddCarFields in adminDashboard.js file when  in SpringBackEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
@@ -419,9 +419,9 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="d-grid mt-4 gap-2 d-md-flex justify-content-md-end">
-                                        <button class="btn fs-5 me-3  btn-dark"  type="button">Add Car</button>
-                                        <button class="btn fs-5 me-3 btn-dark"  type="button">Update Car</button>
-                                        <button class="btn fs-5 me-3 btn-dark"  type="button">Delete Car</button>
+                                        <button class="btn fs-5 me-3  btn-dark"  type="button" id="btnAddCar">Add Car</button>
+                                        <button class="btn fs-5 me-3 btn-dark"  type="button" id="btnUpdateCar">Update Car</button>
+                                        <button class="btn fs-5 me-3 btn-dark"  type="button" id="btnDeleteCar">Delete Car</button>
                                     </div>
                                 </div>
                             </form>
