implement deleteCar methods in adminDashboard.js file when  in SpringBackEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
@@ -459,7 +459,7 @@
                                     <th scope="col">Availability</th>
                                 </tr>
                                 </thead>
-                                <tbody></tbody>
+                                <tbody id="tblCars"></tbody>
                             </table>
                         </div>
                     </div>
