--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
@@ -408,7 +408,7 @@
                                 </div>
                                 <div class="col-md-2">
                                     <label for="inputColour" class="form-label">Colour</label>
-                                    <input type="color" class="form-control" id="inputColour">
+                                    <input type="text" class="form-control" id="inputColour">
                                 </div>
                                 <div class="col-md-2">
                                     <label class="form-label" for="selectCarAvailability">Availability</label>
