create addrent,update,delete,search,getall,generateRentId methods in rentController,rentServiceImpl classes,rentService,driverRepo interfaces in SpringBackEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/userDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/userDashboard.html
@@ -357,6 +357,10 @@
             </div>
           </form>
         </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-dark">Remove Booking</button>
+        </div>
       </div>
     </div>
   </div>
