--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/adminDashboard.html
@@ -149,7 +149,7 @@
                     <div class="row">
                         <div class="col-12 mt-1">
                             <label class="col-12 fw-bold">Admin</label>
-                            <label class="col-12 fs-5 fw-bold">Hansika Perera</label>
+                            <label class="col-12 fs-5 fw-bold" id="lblAdminName">Hansika Perera</label>
                         </div>
                         <div class="col-12 mt-1" style="height: 70px">
                             <div class="row justify-content-center">
