implement generateRentID, setDate methorsd in generalCars.js,premiumCars.js,luxuryCars.js files in SpringBackkEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/generalCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/generalCars.html
@@ -1151,11 +1151,11 @@
                     <form class="row g-3">
                         <div class="col-md-6">
                             <label for="inputRentID" class="form-label fs-4 fw-bold">Rent ID : </label>
-                            <label id="inputRentID" class="form-label fs-4 fw-bold">R001</label>
+                            <label id="inputRentID" class="form-label fs-4 fw-bold"></label>
                         </div>
                         <div class="col-md-6">
                             <label for="inputRentDate" class="form-label fs-4 fw-bold">Rent Date : </label>
-                            <label class="form-label fs-4 fw-bold" id="inputRentDate">2023-02-27</label>
+                            <label class="form-label fs-4 fw-bold" id="inputRentDate"></label>
                         </div>
                         <div class="col-md-4">
                             <label for="carColour" class="form-label">Car Color : </label>
@@ -1167,11 +1167,11 @@
                         </div>
                         <div class="col-md-4">
                             <label for="inputId" class="form-label fs-5">User ID : </label>
-                            <label type="text" class="form-label fs-5" id="inputId">U001</label>
+                            <label type="text" class="form-label fs-5" id="inputId"></label>
                         </div>
                         <div class="col-md-8">
                             <label for="inputName" class="form-label fs-5">User Name : </label>
-                            <label class="form-label fs-5" id="inputName">Hansika Perera</label>
+                            <label class="form-label fs-5" id="inputName"></label>
                         </div>
                         <div class="col-md-4">
                             <label for="inputPickUpDate" class="form-label">PickUp Date</label>
