--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/generalCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/generalCars.html
@@ -140,7 +140,7 @@
 <main id="main"  class="container-fluid">
     <div class="row jumbotron jumbotron-fluid text-center align-items-center bg-black" style="height: 110px; color:white;">
         <div class="col-12">
-            <h1 class="display-5" style="font-family: 'PT Sans', sans-serif;">General Cars</h1>
+            <h1 class="display-5" style="font-family: 'PT Sans', sans-serif;" id="h1CarType">General Cars</h1>
             <p class="lead">We can offer you 30 cars for rent under the General Cars category across five brands</p>
         </div>
     </div>
