--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/premiumCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/premiumCars.html
@@ -141,7 +141,7 @@
 <main id="main" class="container-fluid">
     <div class="row jumbotron jumbotron-fluid text-center align-items-center bg-black" style="height: 110px; color:white;">
         <div class="col-12">
-            <h1 class="display-5" style="font-family: 'PT Sans', sans-serif;">Premium Cars</h1>
+            <h1 class="display-5" style="font-family: 'PT Sans', sans-serif;" id="h1CarType">Premium Cars</h1>
             <p class="lead">We can offer you 14 cars for rent under the Premium Cars category across five brands</p>
         </div>
     </div>
