update implementation of getCarRegisterNumbeBtType method in Carcontroller,carServiceImpl classes,carService,carRepo interfaces in SpringBackEnd

--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/generalCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/generalCars.html
@@ -140,7 +140,8 @@
 <main id="main"  class="container-fluid">
     <div class="row jumbotron jumbotron-fluid text-center align-items-center bg-black" style="height: 110px; color:white;">
         <div class="col-12">
-            <h1 class="display-5" style="font-family: 'PT Sans', sans-serif;" id="h1CarType">General Cars</h1>
+            <label type="text" id="CarType" hidden name="id">General</label>
+            <h1 class="display-5" style="font-family: 'PT Sans', sans-serif;" >General Cars</h1>
             <p class="lead">We can offer you 30 cars for rent under the General Cars category across five brands</p>
         </div>
     </div>
@@ -1158,7 +1159,7 @@
                             <label class="form-label fs-4 fw-bold" id="inputRentDate"></label>
                         </div>
                         <div class="col-md-4">
-                            <label for="carColour" class="form-label">Car Color : </label>
+                            <label for="carColour" class="form-label">Car Color And RegNo : </label>
                             <select class="form-select" id="carColour" aria-label="Default select example"></select>
                         </div>
                         <div class="col-md-8 align-self-center">
