--- a/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/luxuryCars.html
+++ b/Car_Rental_System_With_SpringWebMVC/Spring_Front_End/pages/luxuryCars.html
@@ -141,7 +141,8 @@
 <main id="main" class="container-fluid">
     <div class="row jumbotron jumbotron-fluid text-center align-items-center bg-black" style="height: 110px; color:white;">
         <div class="col-12">
-            <h1 class="display-5" style="font-family: 'PT Sans', sans-serif;" id="h1CarType">Luxury Cars</h1>
+            <label type="text" id="CarType" hidden name="id">Luxury</label>
+            <h1 class="display-5" style="font-family: 'PT Sans', sans-serif;">Luxury Cars</h1>
             <p class="lead">We can offer you 06 cars for rent under the Luxury Cars category across five brands</p>
         </div>
     </div>
@@ -767,7 +768,7 @@
                             <label class="form-label fs-4 fw-bold" id="inputRentDate"></label>
                         </div>
                         <div class="col-md-4">
-                            <label for="carColour" class="form-label">Car Color : </label>
+                            <label for="carColour" class="form-label">Car Color And RegNo : </label>
                             <select class="form-select" id="carColour" aria-label="Default select example"></select>
                         </div>
                         <div class="col-md-8 align-self-center">
